@@ -15,7 +15,7 @@
 
 Contact information:
 <ul>
-<li><a href=http://groups.google.com/group/cocoslive-discuss">cocos Live forum</a></li>
+<li><a href="http://groups.google.com/group/cocoslive-discuss">cocos Live forum</a></li>
 </ul>
 
 {% endblock %}
