@@ -215,6 +215,17 @@ The benefits of using <i>cc_</i> fields is that they can be queried.
 </fieldset>
 </div>
 
+{# Ranking #}
+<div><form action="/user/edit-game" method="post" id="new_playername_form">
+<fieldset><legend>Enable Rankings (experimental feature. Contact admin to enable it)</legend>
+            <div><label>Enable Rankings:</label>{{game.ranking_enabled}}
+            <div><label>Ranking Max Score:</label>{{game.ranking_max_score}}
+            <div><label>Ranking Min Score:</label>{{game.ranking_min_score}}
+            <div><label>Ranking Branch Factor:</label>{{game.ranking_branch_factor}}
+            </div>
+</fieldset>
+</form></div>
+
 {# Delete Scores#}
 <form action="/user/delete-scores" method="post" id="delete_scores_form">
 <fieldset><legend>Delete Scores</legend>
